# GameSiC

./: .gitignore  CMakeLists.txt
exe/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt
include/UI/: CMakeLists.txt
include/UI/export/: ButtonBuilderIf.hpp  ButtonIf.hpp  MenuIf.hpp  StartMenuIf.hpp
include/UI/inc/: Button.hpp  Menu.hpp  StandardButtonBuilder.hpp  StartMenu.hpp
include/UI/src/: Button.cpp  Menu.cpp  StandardButtonBuilder.cpp  StartMenu.cpp
include/city/: CMakeLists.txt
include/city/export/: CityIf.hpp
include/city/inc/: City.hpp
include/city/src/: City.cpp
include/gui/: CMakeLists.txt
include/gui/export/: SettingsAdvanceIf.hpp  StartMenuIf.hpp
include/gui/inc/: SettingsAdvance.hpp  SettingsMenu.hpp  StartMenu.hpp  StartMenuView.hpp  StartMenu_Koper.hpp
include/gui/src/: SettingsAdvance.cpp  SettingsMenu.cpp  StartMenu.cpp  StartMenuView.cpp  StartMenu_Koper.cpp
include/mainGameEngine/: CMakeLists.txt
include/mainGameEngine/export/: AssetsMenagerIf.hpp  DrawableManagerIf.hpp  EventHandlerIf.hpp  MainEngineIf.hpp  PoolEventsIf.hpp  StateManagerIf.hpp  UpdatableManagerIf.hpp
include/mainGameEngine/inc/: AssetsMenager.hpp  ButtonManager.hpp  MainEngine.hpp  StateConst.hpp  StateManager.hpp
include/mainGameEngine/src/: MainEngine.cpp  StateManager.cpp
include/settings/: CMakeLists.txt
include/settings/export/: MainSettingsGetterIf.hpp  ReadSettingFileIf.hpp  SettingsObserverIf.hpp  SettingsWindowIf.hpp
include/settings/inc/: ConfigData.hpp  ReadSettingFile.hpp  Settings.hpp
include/settings/src/: ConfigData_KOPER.cpp  ReadSettingFile.cpp  Settings.cpp
include/utils/: CMakeLists.txt
include/utils/export/: AssetsEngineIf.hpp  LoadSettingsIf.hpp  StateManagerIf.hpp
include/utils/inc/: AssetsMenager.hpp  LoadSettings.hpp  StateManager.hpp
include/utils/src/: AssetsMenager.cpp  LoadSettings.cpp
